--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.2",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
+    "react-tts": "^1.0.2",
     "sweetalert2": "^11.7.23",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
