--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-highlight-words": "^0.20.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-tts": "^1.0.2",
-    "sweetalert2": "^11.7.23",
+    "sweetalert2": "^11.6.13",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
